--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
           </div>
         </div>
       </div>
-      <div class="illustration"><img src="images/image-header-desktop.jpg" alt="" srcset=""></div>
+      <div class="illustration desktop-img"><img src="images/image-header-desktop.jpg" alt="" srcset=""></div>
+      <div class="illustration mobile-img"><img src="images/image-header-mobile.jpg" alt="" srcset=""></div>
     </div>
   </main>
 
